--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 </head>
 <body>
 
-<h1>Multiple Backgrounds</h1>
+<h1>DevOps project</h1>
 <p>The following div element has two background images:</p>
   <h1> <p> this is for test </p> </h1>
 
